# sdl2

./: README.md
abstractShapes/: main.cpp  prog
abstractShapes/include/: TexturedRectangle.hpp
abstractShapes/src/: TexturedRectangle.cpp
loadPNG/: main.cpp  prog
marioSunshine/: main.cpp  prog
rectangles/: main.cpp  prog
structure/: .gdb_history  .valgrindlog.txt  CMakeLists.txt  Makefile  build.sh  debug.sh  valgrindlog.sh
structure/include/: AnimateSprite.hpp  CCollider.hpp  CPhysics.hpp  CResources.hpp  Collider2D.hpp  Component.hpp  GameEntity.hpp  ResourceManager.hpp  SDLApp.hpp  SPhysics.hpp  SSpriteUpdate.hpp  System.hpp  TexturedRectangle.hpp
structure/src/: AnimateSprite.cpp  CCollider.cpp  CPhysics.cpp  CResources.cpp  Collider2D.cpp  GameEntity.cpp  ResourceManager.cpp  SDLApp.cpp  SPhysics.cpp  SSpriteUpdate.cpp  TexturedRectangle.cpp  main.cpp
surfaces/: main.cpp  prog
template/: main.cpp  prog
test/: main.cpp  prog
test/glad/include/KHR/: khrplatform.h
test/glad/include/glad/: glad.h
test/glad/src/: glad.c
textureBlending/: main.cpp  prog
tictactoe/: CMakeLists.txt  README.md  build.sh
tictactoe/include/: Constants.hpp  Vectors.hpp
tictactoe/include/SDL/: Text.hpp
tictactoe/include/draw/: Circle.hpp  Cross.hpp  Grid.hpp
tictactoe/src/: main.cpp
tictactoe/src/SDL/: SDLApp.cpp  Text.cpp
tictactoe/src/draw/: Circle.cpp  Cross.cpp  Grid.cpp
ttf/: main.cpp  prog
